--- a/pages/index/test_upload.html
+++ b/pages/index/test_upload.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <title>upload</title>
-</head>
-<body>
-<form action="http://localhost:8080" method="post" enctype="multipart/form-data">
-  <p><input type="text" name="text1" value="text default">
-  <p><input type="text" name="text2" value="a&#x03C9;b">
-  <p><input type="file" name="file1">
-  <p><button type="submit">Submit</button>
-</form>
-</body>
+	<head>
+	  <meta charset="utf-8"/>
+	  <title>upload</title>
+	</head>
+	<body>
+		<form action="http://localhost:8080" method="post" enctype="multipart/form-data">
+		  <p><input type="text" name="text1" value="text default">
+		  <p><input type="text" name="text2" value="a&#x03C9;b">
+		  <p><input type="file" name="file1">
+		  <p><button type="submit">Submit</button>
+		</form>
+
+		<h2>TEST IMAGE PNG/JPEG</h2>
+		<form action="http://localhost:8080" method="post"> <!-- DEFAULT enctype = application/x-www-form-urlencoded -->
+			<input type="file" name="image" accept="image/png, image/jpeg">
+			<button type="submit">Submit</button>
+		</form>
+
+		<h2>TEST .TXT</h2>
+		<form action="http://localhost:8080" method="post">
+			<input type="file" name="text" accept=".txt">
+			<button type="submit">Submit</button>
+		</form>
+
+	</body>
 </html>
