--- a/pages/index/test_upload.html
+++ b/pages/index/test_upload.html
@@ -5,21 +5,21 @@
 	  <title>upload</title>
 	</head>
 	<body>
-		<form action="http://localhost:8080" method="post" enctype="multipart/form-data">
-		  <p><input type="text" name="text1" value="text default">
-		  <p><input type="text" name="text2" value="a&#x03C9;b">
-		  <p><input type="file" name="file1">
+		<form action="http://127.0.0.1:8000/form.php" method="post" enctype="multipart/form-data">
+		  <p><input type="text" name="text1" value="low">
+		  <p><input type="text" name="text2" value="rider">
+		  <!-- <p><input type="file" name="file1"> -->
 		  <p><button type="submit">Submit</button>
 		</form>
 
 		<h2>TEST IMAGE PNG/JPEG</h2>
-		<form action="http://localhost:8080" method="post" enctype="multipart/form-data"> <!-- DEFAULT enctype = application/x-www-form-urlencoded -->
+		<form action="http://localhost:8000" method="post" enctype="multipart/form-data"> <!-- DEFAULT enctype = application/x-www-form-urlencoded -->
 			<input type="file" name="image" accept="image/png, image/jpeg">
 			<button type="submit">Submit</button>
 		</form>
 
 		<h2>TEST .TXT</h2>
-		<form action="http://localhost:8080" method="post">
+		<form action="http://localhost:8000" method="post">
 			<input type="file" name="text" accept=".txt">
 			<button type="submit">Submit</button>
 		</form>
