--- a/pages/index/test_upload.html
+++ b/pages/index/test_upload.html
@@ -8,7 +8,7 @@
 		<form action="http://127.0.0.1:8000/form.php" method="post" enctype="multipart/form-data">
 		  <p><input type="text" name="text1" value="low">
 		  <p><input type="text" name="text2" value="rider">
-		  <!-- <p><input type="file" name="file1"> -->
+		  <p><input type="file" name="file1">
 		  <p><button type="submit">Submit</button>
 		</form>
 
