--- a/pages/index/test_upload.html
+++ b/pages/index/test_upload.html
@@ -8,9 +8,16 @@
 		<form action="http://127.0.0.1:8000/form.php" method="post" enctype="multipart/form-data">
 		  <p><input type="text" name="text1" value="low">
 		  <p><input type="text" name="text2" value="rider">
-		  <p><input type="file" name="file1">
+		  <p><input type="hidden" name="MAX_FILE_SIZE" value="30000" /><input type="file" name="userfile">
 		  <p><button type="submit">Submit</button>
 		</form>
+
+<!-- <h2>COUCOU</h2>
+		<form enctype="multipart/form-data" action="_URL_" method="post">
+			<input type="hidden" name="MAX_FILE_SIZE" value="30000" />
+			Envoyez ce fichier : <input name="userfile" type="file" />
+			<input type="submit" value="Envoyer le fichier" />
+		</form> -->
 
 		<h2>TEST IMAGE PNG/JPEG</h2>
 		<form action="http://localhost:8000" method="post" enctype="multipart/form-data"> <!-- DEFAULT enctype = application/x-www-form-urlencoded -->
