--- a/pages/index/test_upload.html
+++ b/pages/index/test_upload.html
@@ -8,7 +8,7 @@
 		<form action="http://127.0.0.1:8000/form.php" method="post" enctype="multipart/form-data">
 		  <p><input type="text" name="text1" value="low">
 		  <p><input type="text" name="text2" value="rider">
-		  <p><input type="hidden" name="MAX_FILE_SIZE" value="30000" /><input type="file" name="userfile">
+		  <p><input type="hidden" name="MAX_FILE_SIZE" value="1000000" /><input type="file" name="userfile">
 		  <p><button type="submit">Submit</button>
 		</form>
 
@@ -20,15 +20,20 @@
 		</form> -->
 
 		<h2>TEST IMAGE PNG/JPEG</h2>
-		<form action="http://localhost:8000" method="post" enctype="multipart/form-data"> <!-- DEFAULT enctype = application/x-www-form-urlencoded -->
-			<input type="file" name="image" accept="image/png, image/jpeg">
-			<button type="submit">Submit</button>
+		<form action="http://127.0.0.1:8000/form.php" method="post" enctype="multipart/form-data">
+		  <p><input type="text" name="text1" value="low">
+		  <p><input type="text" name="text2" value="rider">
+		  <p><input type="hidden" name="MAX_FILE_SIZE" value="1000000" /><input type="file" name="userfile" accept="image/png, image/jpeg">
+		  <p><button type="submit">Submit</button>
 		</form>
 
+		<!-- DEFAULT enctype = application/x-www-form-urlencoded -->
 		<h2>TEST .TXT</h2>
-		<form action="http://localhost:8000" method="post">
-			<input type="file" name="text" accept=".txt">
-			<button type="submit">Submit</button>
+		<form action="http://127.0.0.1:8000/form.php" method="post" enctype="multipart/form-data">
+		  <p><input type="text" name="text1" value="low">
+		  <p><input type="text" name="text2" value="rider">
+		  <p><input type="hidden" name="MAX_FILE_SIZE" value="1000000" /><input type="file" name="userfile" accept=".txt">
+		  <p><button type="submit">Submit</button>
 		</form>
 
 	</body>
