--- a/pages/index/basic.html
+++ b/pages/index/basic.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 	<title>3 Column Layout</title>
 	<style type="text/css">
 
@@ -176,6 +177,22 @@
 	<div id="footer-wrapper">
 		<footer id="footer"><p>Footer...</p></footer>
 	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+	<script>
+	window.cookieconsent.initialise({
+	  "palette": {
+		"popup": {
+		  "background": "#000"
+		},
+		"button": {
+		  "background": "#f1d600"
+		}
+	  },
+	  "theme": "classic",
+	  "type": "opt-in"
+	});
+	</script>
 
 </body>
 
